--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+
 <head>
-    <meta charset='utf-8'>
-    <title>Learning TailwindCSS with gusgluna</title>
-    
+    <meta charset="UTF-8">
+    <title>Aprendiendo TailwindCSS - gusgluna</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <h1>Hola mundo h1</h1>
+    <h2>Hola mundo h2</h2>
 </body>
+
 </html>
+
