--- a/prueba-4.html
+++ b/prueba-4.html
@@ -7,7 +7,7 @@
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body>
-        <button class="bg-blue-500 sm:bg-orange-400 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        <button class="bg-blue-500 sm:bg-green-400 md:bg-gray-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
             Mi primer Botón
         </button>
     </body>
