--- a/prueba-4.html
+++ b/prueba-4.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mi primer Sitio Web con TailwindCSS</title>
-        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    </head>
-    <body>
-        <button class="bg-blue-500 sm:bg-green-400 md:bg-gray-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi primer Sitio Web con TailwindCSS</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container mx-auto">
+        <button
+            class="bg-blue-500 sm:bg-green-400 md:bg-gray-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
             Mi primer Botón
         </button>
-    </body>
+        <h1>Este es un h1</h1>
+        <h2>Este es un h2</h2>
+        <h3>Este es un h3</h3>
+
+        <div>
+            <p class="m-5 mt-10 p-5 pr-10 border">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil error voluptatum dolorem voluptate
+                aliquam facere a at ex. Officia, incidunt provident? Aspernatur, in magni quos cupiditate pariatur
+                voluptates illum aperiam.
+            </p>
+        </div>
+    </div>
+</body>
+
 </html>
