--- a/prueba-4.html
+++ b/prueba-4.html
@@ -14,12 +14,12 @@
             class="bg-blue-500 sm:bg-green-400 md:bg-gray-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
             Mi primer Botón
         </button>
-        <h1>Este es un h1</h1>
+        <h1 class="mt-5 text-green-500 text-2xl">Este es un h1</h1>
         <h2>Este es un h2</h2>
         <h3>Este es un h3</h3>
 
         <div>
-            <p class="m-5 mt-10 p-5 pr-10 border">
+            <p class="m-5 mt-10  p-5 text-base text-lg sm:text-xs border">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil error voluptatum dolorem voluptate
                 aliquam facere a at ex. Officia, incidunt provident? Aspernatur, in magni quos cupiditate pariatur
                 voluptates illum aperiam.
